@@ -126,6 +126,8 @@ public:
   static bool IsUsingTTFSubtitles();
   static void SplitExecFunction(const CStdString &execString, CStdString &strFunction, CStdString &strParam);
   static int GetMatchingShare(const CStdString& strPath, VECSHARES& vecShares, bool& bIsBookmarkName);
+  static CStdString TranslateSpecialDir(const CStdString &strSpecial);
+  static void TranslateBookmarks(VECSHARES& vecShares);
 
 private:
   static bool m_bNetworkUp;
